[gd_scene format=3 uid="uid://ccx00w8sbqrgl"]

[ext_resource type="Script" uid="uid://gj7oj4t53tdu" path="res://UserInteface/user_interface.gd" id="1_7slj1"]
[ext_resource type="Texture2D" uid="uid://8swunmfvbhkp" path="res://Assets/UIAssets/Unitframe/HealthBarUnder.png" id="1_uk6b0"]
[ext_resource type="Texture2D" uid="uid://bob3o228a8gq8" path="res://Assets/UIAssets/Unitframe/HealthBarOver.png" id="2_oq8m3"]
[ext_resource type="FontFile" uid="uid://b0awlsdj1flwo" path="res://Assets/Fonts/Libre_Caslon_Text/LibreCaslonText-Bold.ttf" id="3_0tbjh"]
[ext_resource type="Texture2D" uid="uid://bnpbl2tj61hva" path="res://Assets/UIAssets/Unitframe/MainBar.png" id="3_1pjh6"]
[ext_resource type="Texture2D" uid="uid://bahmomw5mvpt2" path="res://Assets/UIAssets/Unitframe/BlueBar.png" id="4_gvlo8"]
[ext_resource type="PackedScene" uid="uid://bfk5apcyifgvh" path="res://UserInteface/inventory.tscn" id="7_nqw66"]
[ext_resource type="PackedScene" uid="uid://brk7tb78tqdku" path="res://UserInteface/loot_container_display.tscn" id="8_nmdyi"]

[sub_resource type="LabelSettings" id="LabelSettings_es2hi"]
font = ExtResource("3_0tbjh")
font_size = 26
font_color = Color(0.960784, 0.717647, 0.423529, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vtql6"]
font = ExtResource("3_0tbjh")
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_tmon3"]
color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_co48v"]
resource_name = "FadeOutText"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/InteractContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, -2),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HUD/InteractContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_hc7jn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/InteractContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HUD/InteractContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ahu28"]
_data = {
&"FadeOutText": SubResource("Animation_co48v"),
&"RESET": SubResource("Animation_hc7jn")
}

[node name="UserInterface" type="Control" unique_id=1809275841]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_7slj1")

[node name="HUD" type="MarginContainer" parent="." unique_id=2119940099]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="InfoBar" type="Control" parent="HUD" unique_id=262558765]
layout_mode = 2
mouse_filter = 2

[node name="HealthBarUnder" type="TextureRect" parent="HUD/InfoBar" unique_id=195605516]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_uk6b0")

[node name="HealthBar" type="TextureProgressBar" parent="HUD/InfoBar/HealthBarUnder" unique_id=552456531]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
texture_progress = ExtResource("3_1pjh6")

[node name="HealthLabel" type="Label" parent="HUD/InfoBar/HealthBarUnder/HealthBar" unique_id=95101179]
unique_name_in_owner = true
custom_minimum_size = Vector2(95, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 108.0
offset_top = -15.0
offset_right = 243.0
offset_bottom = -15.0
grow_vertical = 2
text = "1000/1000"
label_settings = SubResource("LabelSettings_es2hi")
vertical_alignment = 1

[node name="XPBar" type="TextureProgressBar" parent="HUD/InfoBar/HealthBarUnder" unique_id=1349075960]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
texture_progress = ExtResource("4_gvlo8")

[node name="HealthBarOver" type="TextureRect" parent="HUD/InfoBar" unique_id=78561732]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_oq8m3")

[node name="LevelLabel" type="Label" parent="HUD/InfoBar/HealthBarOver" unique_id=1918193631]
unique_name_in_owner = true
custom_minimum_size = Vector2(95, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 1.0
grow_vertical = 2
text = "999"
label_settings = SubResource("LabelSettings_es2hi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InteractContainer" type="VBoxContainer" parent="HUD" unique_id=1055380342]
visible = false
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2

[node name="InteractButtonLabel" type="Label" parent="HUD/InteractContainer" unique_id=180993294]
layout_mode = 2
text = "E"
label_settings = SubResource("LabelSettings_vtql6")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="HUD/InteractContainer" unique_id=78022924]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_tmon3")

[node name="InteractItemName" type="Label" parent="HUD/InteractContainer" unique_id=1201690902]
unique_name_in_owner = true
layout_mode = 2
text = "Open Chest"
label_settings = SubResource("LabelSettings_vtql6")
horizontal_alignment = 1

[node name="Inventory" parent="." unique_id=1197938487 instance=ExtResource("7_nqw66")]
visible = false
layout_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=557936846]
libraries/ = SubResource("AnimationLibrary_ahu28")
autoplay = &"RESET"

[node name="LootContainerDisplay" parent="." unique_id=1042181897 node_paths=PackedStringArray("inventory") instance=ExtResource("8_nmdyi")]
layout_mode = 1
inventory = NodePath("../Inventory")
